--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-   // implementation 'me.dm7.barcodescanner:zxing1.9.8'
-   // implementation 'com.journeyapps:zxing-android-embedded:3.2.2@aar'
-   // implementation 'com.google.zxing:core:3.3.3'
 
     implementation 'com.google.zxing:core:3.3.3'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+
+    implementation 'com.android.volley:volley:1.1.0'
+
+    implementation 'com.google.code.gson:gson:2.8.2'
+
 }
