--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,10 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.2'
 
+
+
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:percent:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
 }
