--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".scan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,7 @@
         </activity>
         <activity android:name=".SignUp" />
         <activity android:name=".progressbar" />
-        <activity android:name=".scan" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".phishingPage" />
         <activity android:name=".confirmationPage"></activity>
 
